--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.5",
     "@mdi/font": "5.9.55",
     "@preline/accordion": "^1.2.0",
     "autoprefixer": "^10",
@@ -17,8 +18,10 @@
     "preline": "^1.2.1",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
+    "swiper": "^8.4.4",
     "tailwindcss": "^3",
     "tw-elements": "^1.0.0-alpha12",
+    "velocityjs": "^2.0.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vue-tailwind": "^2.5.1",
